[Server] Add priority field in subtitle object
