# server/repository/dbmodels/subtitles.go
@@ -29,6 +29,7 @@ type Subtitle struct {
 	Name      string    `boil:"name" json:"name" toml:"name" yaml:"name"`
 	Owner     string    `boil:"owner" json:"owner" toml:"owner" yaml:"owner"`
 	Link      string    `boil:"link" json:"link" toml:"link" yaml:"link"`
+	Priority  int       `boil:"priority" json:"priority" toml:"priority" yaml:"priority"`
 	FileKey   string    `boil:"file_key" json:"file_key" toml:"file_key" yaml:"file_key"`
 	CreatedAt time.Time `boil:"created_at" json:"created_at" toml:"created_at" yaml:"created_at"`
 	UpdatedAt time.Time `boil:"updated_at" json:"updated_at" toml:"updated_at" yaml:"updated_at"`
@@ -44,6 +45,7 @@ var SubtitleColumns = struct {
 	Name      string
 	Owner     string
 	Link      string
+	Priority  string
 	FileKey   string
 	CreatedAt string
 	UpdatedAt string
@@ -54,6 +56,7 @@ var SubtitleColumns = struct {
 	Name:      "name",
 	Owner:     "owner",
 	Link:      "link",
+	Priority:  "priority",
 	FileKey:   "file_key",
 	CreatedAt: "created_at",
 	UpdatedAt: "updated_at",
@@ -66,6 +69,7 @@ var SubtitleTableColumns = struct {
 	Name      string
 	Owner     string
 	Link      string
+	Priority  string
 	FileKey   string
 	CreatedAt string
 	UpdatedAt string
@@ -76,6 +80,7 @@ var SubtitleTableColumns = struct {
 	Name:      "subtitles.name",
 	Owner:     "subtitles.owner",
 	Link:      "subtitles.link",
+	Priority:  "subtitles.priority",
 	FileKey:   "subtitles.file_key",
 	CreatedAt: "subtitles.created_at",
 	UpdatedAt: "subtitles.updated_at",
@@ -90,6 +95,7 @@ var SubtitleWhere = struct {
 	Name      whereHelperstring
 	Owner     whereHelperstring
 	Link      whereHelperstring
+	Priority  whereHelperint
 	FileKey   whereHelperstring
 	CreatedAt whereHelpertime_Time
 	UpdatedAt whereHelpertime_Time
@@ -100,6 +106,7 @@ var SubtitleWhere = struct {
 	Name:      whereHelperstring{field: "`subtitles`.`name`"},
 	Owner:     whereHelperstring{field: "`subtitles`.`owner`"},
 	Link:      whereHelperstring{field: "`subtitles`.`link`"},
+	Priority:  whereHelperint{field: "`subtitles`.`priority`"},
 	FileKey:   whereHelperstring{field: "`subtitles`.`file_key`"},
 	CreatedAt: whereHelpertime_Time{field: "`subtitles`.`created_at`"},
 	UpdatedAt: whereHelpertime_Time{field: "`subtitles`.`updated_at`"},
@@ -133,9 +140,9 @@ func (r *subtitleR) GetVideo() *Video {
 type subtitleL struct{}
 
 var (
-	subtitleAllColumns            = []string{"id", "video_id", "language", "name", "owner", "link", "file_key", "created_at", "updated_at"}
+	subtitleAllColumns            = []string{"id", "video_id", "language", "name", "owner", "link", "priority", "file_key", "created_at", "updated_at"}
 	subtitleColumnsWithoutDefault = []string{"video_id", "language", "name", "owner", "link", "file_key"}
-	subtitleColumnsWithDefault    = []string{"id", "created_at", "updated_at"}
+	subtitleColumnsWithDefault    = []string{"id", "priority", "created_at", "updated_at"}
 	subtitlePrimaryKeyColumns     = []string{"id"}
 	subtitleGeneratedColumns      = []string{}
 )
